--- a/xjob/src/components/DrawerDetailJob/drawerDetailJob.css
+++ b/xjob/src/components/DrawerDetailJob/drawerDetailJob.css
@@ -26,6 +26,15 @@
     color: rgb(44, 44, 44);
 }
 
+#detailJobDrawer .content .detailJobDrawerTitle .btnSubmitProposal {
+    background-color: #3c8224;
+    color: #fff;
+    border-radius: 50px;
+    padding: 0px 20px;
+    font-family: sans-serif;
+    font-size: 0.7em;
+}
+
 #detailJobDrawer .content .detailJobDrawerDetail {
     padding: 20px 25px;
     border-bottom: 1px solid #d5e0d5;
