applicant profile page

--- a/xjob/src/components/Proposal/proposal.css
+++ b/xjob/src/components/Proposal/proposal.css
@@ -20,6 +20,15 @@
     font-size: 0.95em;
 }
 
+#proposal .proposalInfo .proposalName a {
+    text-decoration: none;
+    color: #174296;
+}
+
+#proposal .proposalInfo .proposalName a:hover {
+    text-decoration: underline;
+}
+
 #proposal .proposalInfo .btnGroup .button {
     color: #3c8224;
     border: #3c8224 1px solid;
